# libepubpacker

./: CMakeLists.txt  COPYING
epub/: Epub.cc  Epub.hh  ISODate.cc  ISODate.hh  Zip.cc  Zip.hh
test/: DocTest.cc  ISODateTest.cc
util/: ISODate.cc  ISODate.hh  Magic.cc  Magic.hh  Zip.cc  Zip.hh
xml/: Doc.cc  Doc.hh
